<resources>
    <string name="app_name">calculator</string>
    <string name="result_text">0</string>
    <string name="calculator_input">calculator input</string>
    <string name="input_text">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="divider">/</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="multiply">*</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_plus">+</string>
    <string name="btn_clear">C</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_minus">-</string>
    <string name="btn_0">0</string>
</resources>